--- a/package.json
+++ b/package.json
@@ -52,9 +52,9 @@
         "favicons-webpack-plugin": "0.0.9",
         "html-webpack-plugin": "3.2.0",
         "mini-css-extract-plugin": "0.4.1",
-        "node-sass": "4.9.2",
         "optimize-css-assets-webpack-plugin": "5.0.0",
         "postcss-loader": "2.1.6",
+        "sass": "^1.49.9",
         "sass-loader": "7.1.0",
         "style-loader": "0.21.0",
         "stylus": "0.54.5",
